test/extra/negative/selectOn1Bit.net
INPUT a
OUTPUT r
VAR a, r
IN
r = SELECT 0 a
